Update excercises.md